Added some styling for .hero

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,3 +6,8 @@
 .btn-outline-light {
     border-width: 2px;
 }
+
+.hero {
+    margin-top: 0!important;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
